dockerfile update 3